--- a/templates/date_edit.html
+++ b/templates/date_edit.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block page_title %}
-    Editing {{ date_info.title }}<br><br>
+    Editing {{ date_info.title }}
 {% endblock %}
 
 {% block content %}
