Add button fading.

--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,8 @@
             text-decoration: none;
             cursor: pointer;
             border: 1px outset #4F4F4F;
-            line-height: 1; /* Reset line height */
+            line-height: 1;
+            transition: background-color 0.2s ease;
         }
 
         button:hover, .button:hover {
